fixed element and overlay overlap

--- a/public/scss/default.scss
+++ b/public/scss/default.scss
@@ -279,7 +279,7 @@ $previewContentWidth: $previewWidth - $handleWidth;
 	width: 100%;
 	height: 100%;
 	background-image: url('opacity50.png');
-	z-index: 100;
+	z-index: 1000;
 	.instructions{
 		color: white;
 		background-color: black;
